@startuml er_modelo_datos

' ============================================================
' Estilo claro estandar — fondo blanco, fuente y lineas negras,
' rellenos pastel suaves. NO MODO OSCURO.
' Inyectado por docs/diagramas/plantuml/_normalizar_estilo_claro.py
' ============================================================
skinparam backgroundColor #FFFFFF
skinparam defaultFontColor #000000
skinparam defaultFontName "Helvetica"
skinparam defaultFontSize 12
skinparam shadowing false
skinparam roundCorner 6
skinparam ArrowColor #000000
skinparam ArrowFontColor #000000

' Notas: amarillo palido, texto negro, borde naranja oscuro.
skinparam noteBackgroundColor #FFF9CC
skinparam noteBorderColor #B5852E
skinparam noteFontColor #000000

' Titulos
skinparam titleFontColor #1F4E79
skinparam titleFontSize 14
skinparam titleFontStyle bold

' Divisores y headers
skinparam dividerBackgroundColor #F2F2F2
skinparam dividerFontColor #000000

' ─── Secuencia ───────────────────────────
skinparam sequence {
  ActorBackgroundColor #DAE8FC
  ActorBorderColor #000000
  ActorFontColor #000000
  ParticipantBackgroundColor #FFF2CC
  ParticipantBorderColor #000000
  ParticipantFontColor #000000
  LifeLineBorderColor #000000
  LifeLineBackgroundColor #FFFFFF
  ArrowColor #000000
  ArrowFontColor #000000
  GroupBackgroundColor #F2F2F2
  GroupHeaderFontColor #000000
  GroupBorderColor #000000
  ReferenceBackgroundColor #FFF9CC
  ReferenceBorderColor #B5852E
  ReferenceFontColor #000000
  DividerBackgroundColor #F2F2F2
  DividerFontColor #000000
}
skinparam activationBackgroundColor #FFF2CC
skinparam activationBorderColor #000000
skinparam databaseBackgroundColor #E1D5E7
skinparam databaseBorderColor #000000
skinparam databaseFontColor #000000

' ─── Actividad ───────────────────────────
skinparam activity {
  BackgroundColor #FFF2CC
  BorderColor #000000
  ArrowColor #000000
  FontColor #000000
  StartColor #000000
  EndColor #000000
  DiamondBackgroundColor #DAE8FC
  DiamondBorderColor #000000
  DiamondFontColor #000000
}
skinparam activityArrowColor #000000

' ─── Estados ─────────────────────────────
skinparam state {
  BackgroundColor #DAE8FC
  BorderColor #000000
  FontColor #000000
  ArrowColor #000000
  StartColor #000000
  EndColor #000000
}

' ─── Casos de uso ────────────────────────
skinparam usecase {
  BackgroundColor #FFF2CC
  BorderColor #000000
  ArrowColor #000000
  FontColor #000000
}
skinparam actor {
  BackgroundColor #DAE8FC
  BorderColor #000000
  FontColor #000000
}

' ─── Clases ──────────────────────────────
skinparam class {
  BackgroundColor #FFF2CC
  BorderColor #000000
  ArrowColor #000000
  FontColor #000000
  AttributeFontColor #000000
  StereotypeFontColor #595959
}
skinparam classAttributeIconSize 0
skinparam classBackgroundColor #FFF2CC
skinparam classBorderColor #000000

' ─── Componentes / paquetes ──────────────
skinparam component {
  BackgroundColor #D5E8D4
  BorderColor #000000
  ArrowColor #000000
  FontColor #000000
}
skinparam package {
  BackgroundColor #F2F2F2
  BorderColor #000000
  FontColor #000000
}
skinparam node {
  BackgroundColor #FFF2CC
  BorderColor #000000
  FontColor #000000
}
skinparam cloud {
  BackgroundColor #E1D5E7
  BorderColor #000000
  FontColor #000000
}

' ─── ER ──────────────────────────────────
skinparam entity {
  BackgroundColor #FFF2CC
  BorderColor #000000
  FontColor #000000
}

' ─── Rectangulos genericos ──────────────
skinparam rectangle {
  BackgroundColor #F8F8F8
  BorderColor #000000
  FontColor #000000
}

' ─── Interfaces ──────────────────────────
skinparam interface {
  BackgroundColor #FFF2CC
  BorderColor #000000
  FontColor #000000
}

' ============================================================
' Diagrama Entidad-Relación — PostgreSQL 15
' Ruta: docs/diagramas/plantuml/04_er_modelo_datos.puml
'
' Esquema unificado tras ADR-027 (10/05/2026): admins y usuarios web
' conviven en la tabla usuarios_app, diferenciados por los flags
' is_admin y es_root.
' ============================================================

!define TABLE(name,desc) class name as "desc" << (T,#FFAAAA) >>
!define PK(x) <u>x</u>
!define FK(x) <i>x</i>

hide methods
hide stereotypes

entity "benchmark_evaluaciones" as BE {
  PK(id) : SERIAL
  --
  nickname : VARCHAR(100)  NOT NULL
  prompt : TEXT  NOT NULL
  category : testcategory  NOT NULL
  es_generacion_imagen : BOOLEAN  NOT NULL  DEFAULT FALSE
  status : sessionstatus  NOT NULL  DEFAULT 'pendiente'
  similitud_jaccard_media : FLOAT  NULL
  subcategoria_csv : VARCHAR(150)  NULL
  texto_entrada : TEXT  NULL
  texto_entrada_autogenerado : BOOLEAN  NOT NULL  DEFAULT FALSE
  created_at : TIMESTAMPTZ  NOT NULL
  completed_at : TIMESTAMPTZ  NULL
}

entity "llm_responses" as LR {
  PK(id) : SERIAL
  --
  FK(evaluacion_id) : INTEGER  NOT NULL  → benchmark_evaluaciones.id
  FK(tarifa_id) : INTEGER  NULL  → tarifas_llm.id  (ON DELETE RESTRICT)
  provider : llmprovider  NOT NULL
  model_name : VARCHAR(100)  NOT NULL
  idioma_prompt : VARCHAR(2)  NOT NULL  DEFAULT 'es'  CHECK('es','en')
  response_text : TEXT  NULL
  --
  input_tokens : INTEGER  DEFAULT 0
  input_tokens_cached : INTEGER  NOT NULL  DEFAULT 0
  output_tokens : INTEGER  DEFAULT 0
  tuvo_error : BOOLEAN  DEFAULT FALSE
  error_message : TEXT  NULL
  --
  latency_ms : INTEGER  DEFAULT 0
  tokens_por_segundo : FLOAT  DEFAULT 0
  ratio_sal_ent : FLOAT  DEFAULT 0
  cost_usd : NUMERIC(12,8)  DEFAULT 0
  coste_por_100_palabras : NUMERIC(12,8)  DEFAULT 0
  --
  palabras : INTEGER  DEFAULT 0
  diversidad_lexica : FLOAT  DEFAULT 0
  parrafos : INTEGER  DEFAULT 0
  --
  imagen_miniatura : TEXT  NULL
  created_at : TIMESTAMPTZ  NOT NULL
}

entity "tarifas_llm" as TL {
  PK(id) : SERIAL
  --
  proveedor : llmprovider  NOT NULL
  precio_entrada_usd_por_mtoken : NUMERIC(12,8)  NOT NULL
  precio_salida_usd_por_mtoken : NUMERIC(12,8)  NOT NULL
  precio_entrada_cacheado_usd_por_mtoken : NUMERIC(12,8)  NULL
  precio_imagen_generar_usd_por_imagen : NUMERIC(12,8)  NULL
  precio_imagen_editar_usd_por_imagen : NUMERIC(12,8)  NULL
  vigente : BOOLEAN  NOT NULL  DEFAULT TRUE
  actualizado_en : TIMESTAMPTZ  NOT NULL
  actualizado_por : VARCHAR(64)  NULL
  --
  UNIQUE (proveedor) WHERE vigente = TRUE
  INDEX (proveedor, actualizado_en)
}

entity "user_evaluations" as UE {
  PK(id) : SERIAL
  --
  FK(response_id) : INTEGER  NOT NULL  UNIQUE  → llm_responses.id
  nickname : VARCHAR(100)  NOT NULL
  rating : SMALLINT  NOT NULL  CHECK(0..5)
  rango_preferencia : INTEGER  NULL
  created_at : TIMESTAMPTZ  NOT NULL
  updated_at : TIMESTAMPTZ  NOT NULL
}

entity "usuarios_app" as UA {
  PK(id) : SERIAL
  --
  nick : VARCHAR(100)  NOT NULL  UNIQUE
  password_hash : VARCHAR(255)  NOT NULL  (bcrypt)
  email : VARCHAR(255)  NULL  UNIQUE
  is_admin : BOOLEAN  NOT NULL  DEFAULT FALSE
  es_root : BOOLEAN  NOT NULL  DEFAULT FALSE
  estado : estadousuarioapp  NOT NULL  DEFAULT 'pendiente_acceso'
  cuota_asignada : INTEGER  NOT NULL  DEFAULT 0
  consultas_usadas : INTEGER  NOT NULL  DEFAULT 0
  intentos_fallidos : INTEGER  NOT NULL  DEFAULT 0
  guia_vista : BOOLEAN  NOT NULL  DEFAULT FALSE
  created_at : TIMESTAMPTZ  NOT NULL
  updated_at : TIMESTAMPTZ  NOT NULL
  --
  CHECK ck_admin_requires_email:
    (NOT is_admin) OR (email IS NOT NULL)
}

' ─── RELACIONES ─────────────────────────────────────────────

BE ||--o{ LR : "1 evaluacion\ntiene N respuestas\n(una por proveedor)"
LR ||--o| UE : "1 respuesta tiene\n0..1 valoraciones\n(relación 1:1)"
TL ||--o{ LR : "1 tarifa\nse aplico a N respuestas\n(version vigente al momento)"

note top of BE
  **Cardinalidades habituales:**
  - 4 LLMResponse por evaluacion (texto monolingue)
  - 8 LLMResponse por evaluacion (texto bilingue ES/EN)
    → categorías razonamiento, creativa, concretas con prompt
    predefinido: 4 filas idioma_prompt='es' + 4 filas 'en'
  - 3 LLMResponse por evaluacion (imagen generativa)
    → Claude no genera imágenes (SOPORTA_IMAGEN=False)
  - similitud_jaccard_media se calcula al completar
    la evaluacion sobre las respuestas idioma_prompt='es'
    si hay >= 2 respuestas válidas
  - subcategoria_csv : solo informativo
    para el CSV de admin, no participa en runner ni dashboard
end note

note right of UE
  response_id UNIQUE garantiza
  la relación 1:1 con LLMResponse.
  rating CHECK(0..5): 0 indica
  rechazo por política de seguridad
  del modelo (no es 'sin valorar').
  Solo el propietario (mismo nickname
  que la evaluacion padre) puede
  insertar — RF-12, RF-13.
end note

note bottom of UA
  admins y usuarios web conviven aquí.
  - is_admin=False  → usuario regular
  - is_admin=True, es_root=False
                    → admin promovido
  - is_admin=True, es_root=True
                    → admin root (único)
  La relación con benchmark_evaluaciones
  es por nickname (VARCHAR), no por FK,
  para preservar el modelo anónimo  
end note

note right of TL
  Cada PUT del admin marca la vigente
  como vigente=FALSE e inserta una
  nueva fila con vigente=TRUE. El
  indice unico parcial garantiza
  "1 vigente por proveedor" a nivel BD.

  **Precision NUMERIC(12, 8):** 4
  enteros + 8 decimales, coherente con
  el round(coste, 8) del calculo Python.
  Cubre cualquier precio razonable
  (max $9999.99999999).

  **llm_responses.tarifa_id** congela
  el precio de cada llamada: cambiar
  tarifa NO recalcula respuestas pasadas.
end note

@enduml
